# gpr200-Final-QuinnMcDonnell-AtticusClark-ZachOBrian

./: CMakeLists.txt
assignment/assignment7_lighting/: main.cpp
assignment/finalproject/: CMakeLists.txt  main.cpp
assignment/finalproject/assets/: billboard.frag  billboard.vert  defaultLit.frag  defaultLit.vert  orbit.h
core/ew/: procGen.cpp
core/ew/ewMath/: transformations.h
core/qm/: camera.h  procGen.h  shader.cpp  shader.h  texture.cpp  texture.h  transformations.h
